--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "groq-sdk": "^0.37.0",
     "next": "16.1.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
